✨ 实现文件树 (#39)
* ✨ 实现文件树
仿照 https://github.com/PaperMC/docs/blob/5fef1d92b5d7a4744800cfdda2a13ce596451022/src/components/config/ConfigurationStructureDiagram.tsx

* ✨ 完善代码

* ✨ 完善代码

* 🎨 代码格式化

* ✨ 可展开描述 & 使用 twcss 简化

* ✨ 缩小节点图标大小

* 修复差异

---------

Co-authored-by: Dreeam <61569423+Dreeam-qwq@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@docusaurus/theme-search-algolia": "^3.9.2",
         "@giscus/react": "^3.1.0",
         "@gracefullight/docusaurus-plugin-microsoft-clarity": "^1.0.0",
+        "@iconify/react": "^6.0.2",
         "@mdx-js/react": "^3.1.1",
         "antd": "^6.1.0",
         "clsx": "^2.1.1",
