修复问题并优化首页，新增 InteractiveChat 插件 (#78)
* 修改了”快速开始“中缺少的标点，插件端folia中错误的链接，在首页增加引向”关于“界面的卡片。

* 撤销了标题换行

* 增加聊天插件 interactivechat

* 增加了 reading-guide 界面的标点

* 🏷️ 使用快捷路径导入组件

* 🎨 run prettier

---------

Co-authored-by: MrlingXD <90316914+wling-art@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "exclude": ["dist"],
     "compilerOptions": {
         "resolveJsonModule": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "paths": {
+            "@components/*": ["./src/components/*"],
+            "@layouts/*": ["./src/layouts/*"]
+        }
     },
     "mdx": {
         "checkMdx": true
