--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "compilerOptions": {
         "resolveJsonModule": true,
         "jsx": "preserve",
+        "jsxImportSource": "astro",
+        "baseUrl": ".",
         "paths": {
             "@components/*": ["./src/components/*"],
             "@layouts/*": ["./src/layouts/*"]
