--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
         "vue": "^3.5.27"
     },
     "devDependencies": {
-        "astro-vtbot": "^2.1.10",
         "@vite-pwa/astro": "^1.2.0",
+        "astro-vtbot": "^2.1.10",
         "daisyui": "^5.5.17",
+        "oxfmt": "^0.35.0",
         "starlight-contributor-list": "^0.3.2",
         "starlight-links-validator": "^0.19.2",
         "starlight-scroll-to-top": "^0.4.0",
